<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/slide_record" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/autofillLogin"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/autofillLogin"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#020202"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/senha"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="205dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:accessibilityLiveRegion="polite"
        android:backgroundTint="#FFF"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btnEnter"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/autofillSenha"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/autofillSenha"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:visibility="visible"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/showPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/login"
            app:srcCompat="@drawable/closeeye" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>